height body change because of bug on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   overflow: hidden;
   margin: 0;
